--- a/styles/style.css
+++ b/styles/style.css
@@ -139,6 +139,10 @@ body {
     .cabecalho__menu {
         justify-content: center;
     }
+
+    .cabecalho__menu__link {
+        font-size: 1rem;
+    }
     
     .apresentacao{
         flex-direction: column-reverse;
